update github naming link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </p>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/nirmith-dalmeida-81ab2418a/"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://github.com/NirmithVictor"><i class='bx bxl-github'></i></a>
+                    <a href="https://github.com/NirmithDev"><i class='bx bxl-github'></i></a>
                     <a href="https://stackoverflow.com/users/15980907/jay"><i class='bx bxl-stack-overflow'></i></a>
                 </div>
             </div>
@@ -123,7 +123,7 @@
         <div class="social">
             <a href="mailto:nirmithdalmeida@hotmail.com"><i class='bx bxs-envelope'></i></a>
             <a href="https://www.linkedin.com/in/nirmith-dalmeida-81ab2418a/"><i class='bx bxl-linkedin'></i></a>
-            <a href="https://github.com/NirmithVictor"><i class='bx bxl-github'></i></a>
+            <a href="https://github.com/NirmithDev"><i class='bx bxl-github'></i></a>
             <a href="https://stackoverflow.com/users/15980907/jay"><i class='bx bxl-stack-overflow'></i></a>
         </div>
         <p>&#169; Nirmith Victor 2022</p>
