Change button text

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     Cyber Security and Web Developer Enthusiast
                 </h2>
                 <a href="Resume.pdf" class="btn" download="">
-                    Download CV <i class='bx bx-download'></i>
+                    Download Resume <i class='bx bx-download'></i>
                 </a>
             </div>
             <div class="about-text">
