--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </section>
 
     <section class="contact container" id="contact">
-        <h2 class="heading">Contact Us</h2>
+        <h2 class="heading">Get In Touch</h2>
         <form action="" class="contact-form" id="contact-form">
             <input type="text" placeholder="Your Name" class="name" required>
             <input type="email" name="" id="" placeholder="Your email" class="email" required>
