Fix and rework data
Tested and works as expected

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Nirmith Portfolio</title>
     <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/projectFile.css">
     <link rel="icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -22,9 +23,9 @@
         <div class="nav container" style="max-width: 100%;">
             <a href="#" class="logo">Nirmith</a>
             <ul class="navbar">
-                <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#projects" class="nav-link">Projects</a></li>
+                <li><a href="#home" title="home" class="nav-link">Home</a></li>
+                <li><a href="#about" title="about" class="nav-link">About</a></li>
+                <li><a href="./pages/projectFilter.html" title="projects" class="nav-link">Projects</a></li>
                 <li><a href="#testimonials" class="nav-link">Testimonials</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -73,32 +74,7 @@
             </div>
         </div>
     </section>
-    <section class="portfolio" id="projects" style="padding:0rem;">
-        <div class="containers">
-            <div class="row">
-                <div class="section-title text-center">
-                    <h1>Project Filter</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="filter-buttons">
-                    <ul id="filter-btns" class="filter-btns">
-                        <li id="all" class="all" class="active" data-target="all">ALL</li>
-                        <li id="front" class="front" data-target="Html_css">FRONTEND</li>
-                        <li id="full" class="full" data-target="Javascript">FULL STACK</li>
-                        <li id="python" class="python" data-target="Python">PYTHON</li>
-                        <li id="certs" class="certs" data-target="Certs">CERTIFICATIONS</li>
-                        <li id="oop" class="oop" data-target="">OOP</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row" style = "height: 75vh;overflow-x: auto;margin: 0 auto;">
-                <div class="portfolio-gallery" id="portfolio-gallery" style="background-color: #9e9e9ec7;border-radius: 10px;padding: 20px;">
-                    
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <section class="container reviews" id="testimonials">
         <h2 class="heading">Testimonials</h2>
         <div class="reviews-content swiper">
