add a little of the season's spirit

--- a/pages/projectFilter.html
+++ b/pages/projectFilter.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/style2.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/projectFile.css">
+    <link rel="stylesheet" href="../css/style3.css">
     <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -20,6 +21,50 @@
         <i class="bx bx-up-arrow-alt"></i>
     </a>
     <header>
+        <ul class="lightrope">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
         <div class="nav container" style="max-width: 100%;">
             <a href="#" class="logo">Nirmith</a>
             <ul style="margin-top: 20px;">
