--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Nirmith Portfolio</title>
     <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style3.css">
     <link rel="stylesheet" href="./css/projectFile.css">
     <link rel="icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -20,6 +21,50 @@
         <i class="bx bx-up-arrow-alt"></i>
     </a>
     <header>
+        <ul class="lightrope">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
         <div class="nav container" style="max-width: 100%;">
             <a href="#" class="logo">Nirmith</a>
             <ul class="navbar">
