--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </form>
     </section>
     
-    <section class="footer container" id="footer" style="background: black;max-width: 100%;">
+    <section class="footer container" id="footer" style="background: black;max-width: 100%;margin-bottom: 0px;">
         <div class="social">
             <a href="mailto:nirmithdalmeida@hotmail.com"><i class='bx bxs-envelope'></i></a>
             <a href="https://www.linkedin.com/in/nirmith-dalmeida-81ab2418a/"><i class='bx bxl-linkedin'></i></a>
