cosmetic changes and UI improv

--- a/index.html
+++ b/index.html
@@ -22,49 +22,7 @@
         <i class="bx bx-up-arrow-alt"></i>
     </a>
     <header>
-        <ul class="lightrope">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul class="lightrope" id="lightropeContainer">
         </ul>
         <div class="nav container" style="max-width: 100%;">
             <a href="#" class="logo">Nirmith</a>
@@ -163,6 +121,7 @@
     <script src="./data/reviews.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/snow.js"></script>
+    <script src="./js/lightrope.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
