remove Christmas + new year decoration

--- a/pages/projectFilter.html
+++ b/pages/projectFilter.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/projectFile.css">
     <link rel="stylesheet" href="../css/style3.css">
+    <link rel="stylesheet" href="../css/snowAnimation.css">
     <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -21,50 +22,8 @@
         <i class="bx bx-up-arrow-alt"></i>
     </a>
     <header>
-        <ul class="lightrope">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+        <!--<ul class="lightrope" id="lightropeContainer">
+        </ul>-->
         <div class="nav container" style="max-width: 100%;">
             <a href="#" class="logo">Nirmith</a>
             <ul style="margin-top: 20px;">
@@ -72,6 +31,7 @@
             </ul>
         </div>
     </header>   
+    <canvas id="snowCanvas"></canvas>
     <section class="portfolio" id="projects" style=" padding-top: 4rem;">
         <div class="containers">
             <div class="row">
@@ -102,6 +62,8 @@
     <script src="../js/swiper-bundle.min.js"></script>
     <script src="../data/data.js"></script>
     <script src="../js/projectsFilter.js"></script>
+    <!--<script src="../js/lightrope.js"></script>-->
+    <script src="../js/snow.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
