fix css and add project redirection

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 <a href="Resume.pdf" class="btn" download="">
                     Download Resume <i class='bx bx-download'></i>
                 </a>
+                <a href="./pages/projectFilter.html" class="btn">
+                    Projects <i class='bx bx-wrench'></i>
+                </a>
             </div>
             <div class="about-text">
                 <p>Hello! I am Nirmith D'Almeida. CyberSec and Web Developer Enthusiast.</p>
