--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style3.css">
     <link rel="stylesheet" href="css/projectFile.css">
-    <link rel="stylesheet" href="css/snowAnimation.css">
+    <!--<link rel="stylesheet" href="css/snowAnimation.css">-->
     <link rel="icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -40,7 +40,7 @@
             </div>
         </div>
     </header>
-    <canvas id="snowCanvas"></canvas>
+    <!--<canvas id="snowCanvas"></canvas>-->
     <section class="home container" id="home">
         <div class="home-content">
             <div class="home-img">
@@ -123,7 +123,7 @@
     <script src="./data/data.js"></script>
     <script src="./data/reviews.js"></script>
     <script src="./js/main.js"></script>
-    <script src="./js/snow.js"></script>
+    <!--<script src="./js/snow.js"></script>-->
     <!--<script src="./js/lightrope.js"></script>-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
