--- a/pages/projectFilter.html
+++ b/pages/projectFilter.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/projectFile.css">
     <link rel="stylesheet" href="../css/style3.css">
-    <link rel="stylesheet" href="../css/snowAnimation.css">
+    <!--<link rel="stylesheet" href="../css/snowAnimation.css">-->
     <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -25,13 +25,13 @@
         <!--<ul class="lightrope" id="lightropeContainer">
         </ul>-->
         <div class="nav container" style="max-width: 100%;">
-            <a href="#" class="logo">Nirmith</a>
+            <a href="../index.html" class="logo">Nirmith</a>
             <ul style="margin-top: 20px;">
                 <li><a href="../index.html" class="nav-link">Home</a></li>
             </ul>
         </div>
     </header>   
-    <canvas id="snowCanvas"></canvas>
+    <!--<canvas id="snowCanvas"></canvas>-->
     <section class="portfolio" id="projects" style=" padding-top: 4rem;">
         <div class="containers">
             <div class="row">
@@ -63,7 +63,7 @@
     <script src="../data/data.js"></script>
     <script src="../js/projectsFilter.js"></script>
     <!--<script src="../js/lightrope.js"></script>-->
-    <script src="../js/snow.js"></script>
+    <!--<script src="../js/snow.js"></script>-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
