--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h2>
                     Cyber Security and Web Developer Enthusiast
                 </h2>
-                <a href="Resume.pdf" class="btn" download="">
+                <a href="Nirmith_CV.pdf" class="btn" download="">
                     Download Resume <i class='bx bx-download'></i>
                 </a>
                 <a href="./pages/projectFilter.html" class="btn">
