--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="home container" id="home">
         <div class="home-content">
             <div class="home-img">
-                <img src="img/profile.png" alt="Nirmith">
+                <img src="img/profile_new.png" alt="Nirmith">
             </div>
             <div class="home-text">
                 <h3>Hello</h3>
