--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="home-text">
                 <h3>Hello</h3>
                 <h2>I'm <span class="color">Nirmith</span></h2>
-                <p>I'm a <span class="color">Computer Science</span> student with a passion for <br> <span class="color">cybersec</span> and <span class="color">web development</span>
+                <p>I'm a <span class="color">Computer Science</span> graduate currently working at <span class="color">Method CRM</span> as a <span class="color">Jr App Developer</span> with a passion for <br> <span class="color">cybersec</span> and <span class="color">web development</span>
                 <br> Here is a bit more <span class="color">about me</span>.
                 </p>
                 <div class="social">
