--- a/pages/projectFilter.html
+++ b/pages/projectFilter.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/projectFile.css">
     <link rel="stylesheet" href="../css/style3.css">
     <link rel="stylesheet" href="../css/snowAnimation.css">
+    <link rel="stylesheet" href="css/santaClaus.css">
     <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -57,7 +58,13 @@
             </div>
         </div>
     </section>
-    
+    <img
+    id="santa-visitor"
+    src="./img/santa.png"
+    alt="Santa"
+    aria-hidden="true"
+    />
+    <script src="./js/santaVisitor.js"></script>
     <script src="../js/swiper-bundle.min.js"></script>
     <script src="../data/data.js"></script>
     <script src="../js/projectsFilter.js"></script>
